--- a/TODO
+++ b/TODO
@@ -4,8 +4,14 @@
 
 Аккорды
 
-Драм партия
+Драм партия необычные
 
 Анализ благозвучности (класс реализации МОР)
 
 Совмещение 12-24 TET
+
+korg kaos
+
+"биткрашер" (Pole Штефан.. 1 2 3)
+
+импорт плагинов и подстановка (+мастеринг)
